@@ -4,15 +4,15 @@ Priority: extra
 Maintainer: Bernard Gray <bernard.gray@gmail.com>
 Uploaders: Stefan Lippers-Hollmann <s.l-h@gmx.de>
 Build-Depends: debhelper (>= 7),
-               inkscape
-Standards-Version: 3.8.1
+ inkscape
+Standards-Version: 3.8.2
 Vcs-Svn: svn://svn.berlios.de/fullstory/sidux-art-legacy/trunk
 Vcs-Browser: http://svn.berlios.de/wsvn/fullstory/sidux-art-legacy/trunk/
 
 Package: sidux-art-gdm-gaia
 Architecture: all
 Depends: ${misc:Depends},
-         gdm
+ gdm
 Description: GDM theme for sidux 2007-03 release
  the default GDM theme for the 2007-03 (Γάια)
  sidux release.
@@ -20,7 +20,7 @@ Description: GDM theme for sidux 2007-03 release
 Package: sidux-art-kdm-gaia
 Architecture: all
 Depends: ${misc:Depends},
-         kdm
+ kdm
 Description: KDM theme for sidux 2007-03 release
  the default KDM theme for the 2007-03 (Γάια)
  sidux release.
@@ -28,7 +28,7 @@ Description: KDM theme for sidux 2007-03 release
 Package: sidux-art-ksplash-gaia
 Architecture: all
 Depends: ${misc:Depends},
-         kdebase-workspace-bin
+ kdebase-workspace-bin
 Description: KDE ksplash theme for sidux 2007-03 release
  the default KDE ksplash theme for the 2007-03
  (Γάια) sidux release, using the default ksplash engine
@@ -36,7 +36,7 @@ Description: KDE ksplash theme for sidux 2007-03 release
 Package: sidux-art-xsplash-gaia
 Architecture: all
 Depends: ${misc:Depends},
-         xfce4-session
+ xfce4-session
 Description: Xfce splash theme for sidux 2007-03 release
  the default Xfce splash theme for the 2007-03
  (Γάια) sidux release, based on balou theme engine.
@@ -53,9 +53,10 @@ Package: sidux-art-kde-gaia
 Architecture: all
 Provides: sidux-art-kde-theme
 Depends: ${misc:Depends},
-         sidux-art-ksplash-gaia,
-         sidux-art-kdm-gaia,
-Recommends: sidux-art-wallpaper-gaia, dmz-cursor-theme
+ sidux-art-ksplash-gaia,
+ sidux-art-kdm-gaia,
+Recommends: sidux-art-wallpaper-gaia,
+ dmz-cursor-theme
 Description: KDE theme for sidux 2007-03 release
  Virtual package providing ksplash, kdm and KDE themes
  for sidux 2007-03 (Γάια) release
@@ -64,9 +65,10 @@ Package: sidux-art-xfce-gaia
 Architecture: all
 Provides: sidux-art-xfce-theme
 Depends: ${misc:Depends},
-         sidux-art-xsplash-gaia,
-         sidux-art-gdm-gaia
-Recommends: sidux-art-wallpaper-gaia, dmz-cursor-theme
+ sidux-art-xsplash-gaia,
+ sidux-art-gdm-gaia
+Recommends: sidux-art-wallpaper-gaia,
+ dmz-cursor-theme
 Description: Xfce theme for sidux 2007-03 release
  Virtual package providing Xfce-splash and gdm themes
  for sidux 2007-03 (Γάια) release
@@ -74,7 +76,7 @@ Description: Xfce theme for sidux 2007-03 release
 Package: sidux-art-gdm-eros
 Architecture: all
 Depends: ${misc:Depends},
-         gdm
+ gdm
 Description: GDM theme for sidux 2007-04 release
  the default GDM theme for the 2007-04 (Έρως)
  sidux release.
@@ -82,7 +84,7 @@ Description: GDM theme for sidux 2007-04 release
 Package: sidux-art-kdm-eros
 Architecture: all
 Depends: ${misc:Depends},
-         kdm
+ kdm
 Description: KDM theme for sidux 2007-04 release
  the default KDM theme for the 2007-04 (Έρως)
  sidux release.
@@ -90,7 +92,7 @@ Description: KDM theme for sidux 2007-04 release
 Package: sidux-art-ksplash-eros
 Architecture: all
 Depends: ${misc:Depends},
-         kdebase-workspace-bin
+ kdebase-workspace-bin
 Description: KDE ksplash theme for sidux 2007-04 release
  the default KDE ksplash theme for the 2007-04
  (Έρως) sidux release, using the default ksplash engine
@@ -98,7 +100,7 @@ Description: KDE ksplash theme for sidux 2007-04 release
 Package: sidux-art-xsplash-eros
 Architecture: all
 Depends: ${misc:Depends},
-         xfce4-session
+ xfce4-session
 Description: Xfce splash theme for sidux 2007-04 release
  the default Xfce splash theme for the 2007-04
  (Έρως) sidux release, based on balou theme engine.
@@ -115,9 +117,10 @@ Package: sidux-art-kde-eros
 Architecture: all
 Provides: sidux-art-kde-theme
 Depends: ${misc:Depends},
-         sidux-art-ksplash-eros,
-         sidux-art-kdm-eros,
-Recommends: sidux-art-wallpaper-eros, dmz-cursor-theme
+ sidux-art-ksplash-eros,
+ sidux-art-kdm-eros,
+Recommends: sidux-art-wallpaper-eros,
+ dmz-cursor-theme
 Description: KDE theme for sidux 2007-04 release
  Virtual package providing ksplash, kdm and KDE themes
  for sidux 2007-04 (Έρως) release
@@ -126,9 +129,10 @@ Package: sidux-art-xfce-eros
 Architecture: all
 Provides: sidux-art-xfce-theme
 Depends: ${misc:Depends},
-         sidux-art-xsplash-eros,
-         sidux-art-gdm-eros
-Recommends: sidux-art-wallpaper-eros, dmz-cursor-theme
+ sidux-art-xsplash-eros,
+ sidux-art-gdm-eros
+Recommends: sidux-art-wallpaper-eros,
+ dmz-cursor-theme
 Description: Xfce theme for sidux 2007-04 release
  Virtual package providing Xfce-splash and gdm themes
  for sidux 2007-04 (Έρως) release
@@ -146,7 +150,7 @@ Description: sidux-edu wallpaper for 2007-04 release
 Package: sidux-art-gdm-nyx
 Architecture: all
 Depends: ${misc:Depends},
-         gdm
+ gdm
 Description: GDM theme for sidux 2008-01 release
  the default GDM theme for the 2008-01 (Νυξ)
  sidux release.
@@ -154,7 +158,7 @@ Description: GDM theme for sidux 2008-01 release
 Package: sidux-art-kdm-nyx
 Architecture: all
 Depends: ${misc:Depends},
-         kdm
+ kdm
 Description: KDM theme for sidux 2008-01 release
  the default KDM theme for the 2008-01 (Νυξ)
  sidux release.
@@ -162,7 +166,7 @@ Description: KDM theme for sidux 2008-01 release
 Package: sidux-art-ksplash-nyx
 Architecture: all
 Depends: ${misc:Depends},
-         kdebase-workspace-bin
+ kdebase-workspace-bin
 Description: KDE ksplash theme for sidux 2008-01 release
  the default KDE ksplash theme for the 2008-01
  (Νυξ) sidux release, using the default ksplash engine
@@ -170,7 +174,7 @@ Description: KDE ksplash theme for sidux 2008-01 release
 Package: sidux-art-xsplash-nyx
 Architecture: all
 Depends: ${misc:Depends},
-         xfce4-session
+ xfce4-session
 Description: Xfce splash theme for sidux 2008-01 release
  the default Xfce splash theme for the 2008-01
  (Νυξ) sidux release, based on balou theme engine.
@@ -187,9 +191,10 @@ Package: sidux-art-kde-nyx
 Architecture: all
 Provides: sidux-art-kde-theme
 Depends: ${misc:Depends},
-         sidux-art-ksplash-nyx,
-         sidux-art-kdm-nyx,
-Recommends: sidux-art-wallpaper-nyx, dmz-cursor-theme
+ sidux-art-ksplash-nyx,
+ sidux-art-kdm-nyx,
+Recommends: sidux-art-wallpaper-nyx,
+ dmz-cursor-theme
 Description: KDE theme for sidux 2008-01 release
  Virtual package providing ksplash, kdm and KDE themes
  for sidux 2008-01 (Νυξ) release
@@ -198,9 +203,10 @@ Package: sidux-art-xfce-nyx
 Architecture: all
 Provides: sidux-art-xfce-theme
 Depends: ${misc:Depends},
-         sidux-art-xsplash-nyx,
-         sidux-art-gdm-nyx
-Recommends: sidux-art-wallpaper-nyx, dmz-cursor-theme
+ sidux-art-xsplash-nyx,
+ sidux-art-gdm-nyx
+Recommends: sidux-art-wallpaper-nyx,
+ dmz-cursor-theme
 Description: Xfce theme for sidux 2008-01 release
  Virtual package providing Xfce-splash and gdm themes
  for sidux 2008-01 (Νυξ) release
@@ -218,7 +224,7 @@ Description: sidux-edu wallpaper for 2008-01 release
 Package: sidux-art-gdm-erebos
 Architecture: all
 Depends: ${misc:Depends},
-         gdm
+ gdm
 Description: GDM theme for sidux 2008-02 release
  the default GDM theme for the 2008-02 (Έρεβος)
  sidux release.
@@ -226,7 +232,7 @@ Description: GDM theme for sidux 2008-02 release
 Package: sidux-art-kdm-erebos
 Architecture: all
 Depends: ${misc:Depends},
-         kdm
+ kdm
 Description: KDM theme for sidux 2008-02 release
  the default KDM theme for the 2008-02 (Έρεβος)
  sidux release.
@@ -234,7 +240,7 @@ Description: KDM theme for sidux 2008-02 release
 Package: sidux-art-ksplash-erebos
 Architecture: all
 Depends: ${misc:Depends},
-         kdebase-workspace-bin
+ kdebase-workspace-bin
 Description: KDE ksplash theme for sidux 2008-02 release
  the default KDE ksplash theme for the 2008-02
  (Έρεβος) sidux release, using the default ksplash engine
@@ -242,7 +248,7 @@ Description: KDE ksplash theme for sidux 2008-02 release
 Package: sidux-art-xsplash-erebos
 Architecture: all
 Depends: ${misc:Depends},
-         xfce4-session
+ xfce4-session
 Description: Xfce splash theme for sidux 2008-02 release
  the default Xfce splash theme for the 2008-02
  (Έρεβος) sidux release, based on balou theme engine.
@@ -259,9 +265,10 @@ Package: sidux-art-kde-erebos
 Architecture: all
 Provides: sidux-art-kde-theme
 Depends: ${misc:Depends},
-         sidux-art-ksplash-erebos,
-         sidux-art-kdm-erebos,
-Recommends: sidux-art-wallpaper-erebos, dmz-cursor-theme
+ sidux-art-ksplash-erebos,
+ sidux-art-kdm-erebos,
+Recommends: sidux-art-wallpaper-erebos,
+ dmz-cursor-theme
 Description: KDE theme for sidux 2008-02 release
  Virtual package providing ksplash, kdm and KDE themes
  for sidux 2008-02 (Έρεβος) release
@@ -270,9 +277,10 @@ Package: sidux-art-xfce-erebos
 Architecture: all
 Provides: sidux-art-xfce-theme
 Depends: ${misc:Depends},
-         sidux-art-xsplash-erebos,
-         sidux-art-gdm-erebos
-Recommends: sidux-art-wallpaper-erebos, dmz-cursor-theme
+ sidux-art-xsplash-erebos,
+ sidux-art-gdm-erebos
+Recommends: sidux-art-wallpaper-erebos,
+ dmz-cursor-theme
 Description: Xfce theme for sidux 2008-02 release
  Virtual package providing Xfce-splash and gdm themes
  for sidux 2008-02 (Έρεβος) release
@@ -290,7 +298,7 @@ Description: sidux-edu wallpaper for 2008-02 release
 Package: sidux-art-gdm-ourea
 Architecture: all
 Depends: ${misc:Depends},
-         gdm
+ gdm
 Description: GDM theme for sidux 2008-03 release
  the default GDM theme for the 2008-03 (Ουρέα)
  sidux release.
@@ -298,7 +306,7 @@ Description: GDM theme for sidux 2008-03 release
 Package: sidux-art-kdm-ourea
 Architecture: all
 Depends: ${misc:Depends},
-         kdm
+ kdm
 Description: KDM theme for sidux 2008-03 release
  the default KDM theme for the 2008-03 (Ουρέα)
  sidux release.
@@ -306,7 +314,7 @@ Description: KDM theme for sidux 2008-03 release
 Package: sidux-art-ksplash-ourea
 Architecture: all
 Depends: ${misc:Depends},
-         kdebase-workspace-bin
+ kdebase-workspace-bin
 Description: KDE ksplash theme for sidux 2008-03 release
  the default KDE ksplash theme for the 2008-03
  (Ουρέα) sidux release, using the default ksplash engine
@@ -314,7 +322,7 @@ Description: KDE ksplash theme for sidux 2008-03 release
 Package: sidux-art-xsplash-ourea
 Architecture: all
 Depends: ${misc:Depends},
-         xfce4-session
+ xfce4-session
 Description: Xfce splash theme for sidux 2008-03 release
  the default Xfce splash theme for the 2008-03
  (Ουρέα) sidux release, based on balou theme engine.
@@ -331,9 +339,10 @@ Package: sidux-art-kde-ourea
 Architecture: all
 Provides: sidux-art-kde-theme
 Depends: ${misc:Depends},
-         sidux-art-ksplash-ourea,
-         sidux-art-kdm-ourea,
-Recommends: sidux-art-wallpaper-ourea, dmz-cursor-theme
+ sidux-art-ksplash-ourea,
+ sidux-art-kdm-ourea,
+Recommends: sidux-art-wallpaper-ourea,
+ dmz-cursor-theme
 Description: KDE theme for sidux 2008-03 release
  Virtual package providing ksplash, kdm and KDE themes
  for sidux 2008-03 (Ουρέα) release
@@ -342,9 +351,10 @@ Package: sidux-art-xfce-ourea
 Architecture: all
 Provides: sidux-art-xfce-theme
 Depends: ${misc:Depends},
-         sidux-art-xsplash-ourea,
-         sidux-art-gdm-ourea
-Recommends: sidux-art-wallpaper-ourea, dmz-cursor-theme
+ sidux-art-xsplash-ourea,
+ sidux-art-gdm-ourea
+Recommends: sidux-art-wallpaper-ourea,
+ dmz-cursor-theme
 Description: Xfce theme for sidux 2008-03 release
  Virtual package providing Xfce-splash and gdm themes
  for sidux 2008-03 (Ουρέα) release
@@ -362,7 +372,7 @@ Description: sidux-edu wallpaper for 2008-03 release
 Package: sidux-art-gdm-pontos
 Architecture: all
 Depends: ${misc:Depends},
-         gdm
+ gdm
 Description: GDM theme for sidux 2008-04 release
  the default GDM theme for the 2008-04 (Πόντος)
  sidux release.
@@ -370,7 +380,7 @@ Description: GDM theme for sidux 2008-04 release
 Package: sidux-art-kdm-pontos
 Architecture: all
 Depends: ${misc:Depends},
-         kdm
+ kdm
 Description: KDM theme for sidux 2008-04 release
  the default KDM theme for the 2008-04 (Πόντος)
  sidux release.
@@ -378,7 +388,7 @@ Description: KDM theme for sidux 2008-04 release
 Package: sidux-art-ksplash-pontos
 Architecture: all
 Depends: ${misc:Depends},
-         kdebase-workspace-bin
+ kdebase-workspace-bin
 Description: KDE ksplash theme for sidux 2008-04 release
  the default KDE ksplash theme for the 2008-04
  (Πόντος) sidux release, using the default ksplash engine
@@ -386,7 +396,7 @@ Description: KDE ksplash theme for sidux 2008-04 release
 Package: sidux-art-xsplash-pontos
 Architecture: all
 Depends: ${misc:Depends},
-         xfce4-session
+ xfce4-session
 Description: Xfce splash theme for sidux 2008-04 release
  the default Xfce splash theme for the 2008-04
  (Πόντος) sidux release, based on balou theme engine.
@@ -403,9 +413,10 @@ Package: sidux-art-kde-pontos
 Architecture: all
 Provides: sidux-art-kde-theme
 Depends: ${misc:Depends},
-         sidux-art-ksplash-pontos,
-         sidux-art-kdm-pontos,
-Recommends: sidux-art-wallpaper-pontos, dmz-cursor-theme
+ sidux-art-ksplash-pontos,
+ sidux-art-kdm-pontos,
+Recommends: sidux-art-wallpaper-pontos,
+ dmz-cursor-theme
 Description: KDE theme for sidux 2008-04 release
  Virtual package providing ksplash, kdm and KDE themes
  for sidux 2008-04 (Πόντος) release
@@ -414,9 +425,10 @@ Package: sidux-art-xfce-pontos
 Architecture: all
 Provides: sidux-art-xfce-theme
 Depends: ${misc:Depends},
-         sidux-art-xsplash-pontos,
-         sidux-art-gdm-pontos
-Recommends: sidux-art-wallpaper-pontos, dmz-cursor-theme
+ sidux-art-xsplash-pontos,
+ sidux-art-gdm-pontos
+Recommends: sidux-art-wallpaper-pontos,
+ dmz-cursor-theme
 Description: Xfce theme for sidux 2008-04 release
  Virtual package providing Xfce-splash and gdm themes
  for sidux 2008-04 (Πόντος) release
@@ -424,7 +436,7 @@ Description: Xfce theme for sidux 2008-04 release
 Package: sidux-art-gdm-ouranos
 Architecture: all
 Depends: ${misc:Depends},
-         gdm
+ gdm
 Description: GDM theme for sidux 2009-01 release
  the default GDM theme for the 2009-01 (Οὐρανος)
  sidux release.
@@ -432,7 +444,7 @@ Description: GDM theme for sidux 2009-01 release
 Package: sidux-art-kdm-ouranos
 Architecture: all
 Depends: ${misc:Depends},
-         kdm
+ kdm
 Description: KDM theme for sidux 2009-01 release
  the default KDM theme for the 2009-01 (Οὐρανος)
  sidux release.
@@ -440,7 +452,7 @@ Description: KDM theme for sidux 2009-01 release
 Package: sidux-art-ksplash-ouranos
 Architecture: all
 Depends: ${misc:Depends},
-         kdebase-workspace-bin
+ kdebase-workspace-bin
 Description: KDE ksplash theme for sidux 2009-01 release
  the default KDE ksplash theme for the 2009-01
  (Οὐρανος) sidux release, using the default ksplash engine
@@ -448,7 +460,7 @@ Description: KDE ksplash theme for sidux 2009-01 release
 Package: sidux-art-xsplash-ouranos
 Architecture: all
 Depends: ${misc:Depends},
-         xfce4-session
+ xfce4-session
 Description: Xfce splash theme for sidux 2009-01 release
  the default Xfce splash theme for the 2009-01
  (Οὐρανος) sidux release, based on balou theme engine.
@@ -465,9 +477,10 @@ Package: sidux-art-kde-ouranos
 Architecture: all
 Provides: sidux-art-kde-theme
 Depends: ${misc:Depends},
-         sidux-art-ksplash-ouranos,
-         sidux-art-kdm-ouranos,
-Recommends: sidux-art-wallpaper-ouranos, dmz-cursor-theme
+ sidux-art-ksplash-ouranos,
+ sidux-art-kdm-ouranos,
+Recommends: sidux-art-wallpaper-ouranos,
+ dmz-cursor-theme
 Description: KDE theme for sidux 2009-01 release
  Virtual package providing ksplash, kdm and KDE themes
  for sidux 2009-01 (Οὐρανος) release
@@ -476,9 +489,10 @@ Package: sidux-art-xfce-ouranos
 Architecture: all
 Provides: sidux-art-xfce-theme
 Depends: ${misc:Depends},
-         sidux-art-xsplash-ouranos,
-         sidux-art-gdm-ouranos
-Recommends: sidux-art-wallpaper-ouranos, dmz-cursor-theme
+ sidux-art-xsplash-ouranos,
+ sidux-art-gdm-ouranos
+Recommends: sidux-art-wallpaper-ouranos,
+ dmz-cursor-theme
 Description: Xfce theme for sidux 2009-01 release
  Virtual package providing Xfce-splash and gdm themes
  for sidux 2009-01 (Οὐρανος) release
