@@ -4,8 +4,8 @@ Priority: extra
 Maintainer: Bernard Gray <bernard.gray@gmail.com>
 Uploaders: Stefan Lippers-Hollmann <s.l-h@gmx.de>
 Build-Depends: debhelper (>= 7),
-               inkscape
-Standards-Version: 3.8.1
+ inkscape
+Standards-Version: 3.8.2
 Vcs-Svn: svn://svn.berlios.de/fullstory/sidux-art-legacy/trunk
 Vcs-Browser: http://svn.berlios.de/wsvn/fullstory/sidux-art-legacy/trunk/
 
